# DuplicatesFinder

./: CMakeLists.txt
src/: CMakeLists.txt  FileComparer.cpp  FileComparer.h  FileInfo.cpp  FileInfo.h  Finder.cpp  Finder.h  main.cpp
